webui/k8s/01-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: dashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
        - name: dashboard
          image: coastlinesss/dashboard:latest
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: dashboard
