webui/k8s/01-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: web3eye-webui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web3eye-webui
  template:
    metadata:
      labels:
        app: web3eye-webui
    spec:
      containers:
        - name: web3eye-webui
          image: uhub.service.ucloud.cn/web3eye/webui:latest
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: web3eye-webui
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: web3eye-webui
