webui/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web3eye-webui-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: web3eye-webui
    k8s.kuboard.cn/workload: web3eye-webui
    kubernetes.io/ingress.class: 'traefik-internet'
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - '*.web3eye.io'
        - web3eye.io
      secretName: web3eye-io-tls
  rules:
    - host: web3eye.io
      http: &http_rules
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web3eye-webui
                port:
                  number: 80
    - host: www.web3eye.io
      http: *http_rules
